
	* output vector configuration: more than one recording intervals
	can now be given, separated by comma

	* output scalar file gets OVERWRITTEN in each run (not appended to it);
	there is an inifile option to the restore old behaviour

	* output-scalar-file-append=

	* experiment-label   "${configname}"
	* measurement-label  "${iterationvars}"
	* replication-label  "#${repetition}, seedset=@"

	* output-vector-file now defaults to: "${configname}-${runnumber}.vec"
	* output-scalar-file now defaults to: "${configname}-${runnumber}.sca"

	* **.enable-recording=
	* **.record-event-numbers=
	* **.recording-interval=
	* **.record-scalar=  -- enable/disable recording scalars and/or their individual members (for cStatistic)
	* indexed outputvector file manager

	* simtime-scale
	* ned-path, NEDPATH
	* fingerprint
	* seed-set
	* eventlog-file
	* eventlog-message-detail-pattern

	* args.cc/h rewritten ("--" can be used to mark end of options, etc...)

	* inifile entries are now checked against a database of recognized
	options, and unrecognized options (typo, etc) are reported as
	errors instead of failing silently

	* added "-h config", "-h classes", etc command-line option, which prints
	out available config file options, registered classes etc.

	* opp_run program added -- this is an empty simulation executable,
	which can be used to run simulation models that have been compiled
	into a shared library (dll or shared object).

	* out-of-directory build, and other Makefile changes

	Scalar file format change: when a cStatistic is recorded as a scalar, the
	values will be recorded with the following names: (before, the names
	contained dot instead of colon):
	  "<objectname>:count"   (was "samples")
	  "<objectname>:mean"
	  "<objectname>:stddev"
	  "<objectname>:min"
	  "<objectname>:max"

	* parsim: the behavior of the <pattern>.partition-id inifile entries changed

	TODO add the following info to the manual:
