@@ -1,10 +1,10 @@
 [General]
 network = Aloha
 #debug-on-errors = true
-#eventlog-file = x.log
+#record-eventlog = true
 
 Aloha.numHosts = 20
-Aloha.slotTime = 0			   # no slots
+Aloha.slotTime = 0    # no slots
 Aloha.txRate = 9.6Kbps
 Aloha.host[*].pkLenBits = 952b #=119 bytes, so that (with +1 byte guard) slotTime is a nice round number
 Aloha.host[*].radioDelay = 10ms
