@@ -1,7 +1,7 @@
 [General]
 network = ClosedQueueingNetB
 cmdenv-status-frequency = 100000
-#eventlog-file = cqn.log
+#record-eventlog = true
 #debug-on-errors = true
 
 [Config CQN-B]
