@@ -30,7 +30,7 @@ using std::ofstream;
 using std::ios;
 
 
-Register_PerRunConfigEntry(CFGID_SNAPSHOT_FILE, "snapshot-file", CFG_FILENAME, "${configname}-${runnumber}.sna", "Name of the snapshot file.");
+Register_PerRunConfigEntry(CFGID_SNAPSHOT_FILE, "snapshot-file", CFG_FILENAME, "${resultdir}/${configname}-${runnumber}.sna", "Name of the snapshot file.");
 
 
 Register_Class(cFileSnapshotManager);
@@ -58,6 +58,7 @@ void cFileSnapshotManager::endRun()
 
 ostream *cFileSnapshotManager::getStreamForSnapshot()
 {
+    mkPath(directoryOf(fname.c_str()).c_str());
     ostream *os = new ofstream(fname.c_str(), ios::out|ios::app);
     return os;
 }
